@@ -160,8 +160,8 @@ public class OptionalValueExtractor implements ValueExtractor<Optional<@Extracte
 
 This extractor passes the element wrapped by the given `Optional` to the receiver object, if present.
 `null` is passed as a node name, causing no node to be appended to the resulting property path.
-I.e. when the `@Size` constraint in `private Optional<@Size(min=1) String name;` is violated,
-the resulting property path will be the same as if a constraint hosted on the `name` field itself was violated.
+I.e. when the `@Size` constraint in `Optional<@Size(min=1) String getName() { ... }` is violated,
+the resulting property path will be the same as if a constraint hosted on the `getName` getter itself was violated.
 
 A value extractor for `java.util.OptionalInt`:
 
